Horizontal Scroll Fix

--- a/style.css
+++ b/style.css
@@ -180,11 +180,12 @@ nav i{
         backface-visibility: hidden;
         background-color:cadetblue;
         height: 100vh;
-        width: 200px;
+        width: 0;
         top: 0;
-        right: -200px;
+        right: 0;
         text-align:left;
-        z-index: 2;
+        overflow-x: hidden;
+        z-index: 100;
         transition: 1s;
     }
 .fa-solid.fa-xmark {
@@ -207,52 +208,7 @@ nav i{
 .hero-btn{
     display: none;
     }   
-}
-
-  @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape){
-    
-    html, body {
-    overflow-x: hidden;
-}
-    nav img{
-    width: 170px
-    }
-    .social-links {
-    display: none;
-    }
- .nav-links ul li{
-        display:contents;
-    }
-    .nav-links{
-        position:absolute;
-        backface-visibility: hidden;
-        background-color:cadetblue;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align:left;
-        z-index: 2;
-        transition: 1s;
-    }
-.fa-solid.fa-xmark {
-    color: white;
-    display: block;
-    margin: 10px;
-    font-size: 22px;
-    cursor: pointer
-}
-.fa-solid.fa-bars {
-    color: white;
-    display: block;
-    margin: 10px;
-    font-size: 22px;
-    cursor: pointer
- }
-    .nav-links ul{
-        padding: 30px;
-    }
-}    
+}  
 /*----- Collection -----*/
 
 .collection{
@@ -467,7 +423,7 @@ p2{
     color: white
 }
 
-/*----- Explore NFTs page ----*/   
+/*----- Explore page ----*/   
 
 .explore{
     width: 80%;
@@ -671,9 +627,8 @@ p2{
     transform: translateX(-25%);  
     }
     .mint-right img {
-     width: 135%;
-    transform: translateX(-14%);
-    box-shadow: 0 0 20px 0px rgba(22,89,1,1.5); 
+    width: 100%;
+    box-shadow: 0 0 30px 0px rgba(22,89,1,1.5); 
     border-radius: 40px;
     }
     .mint-right div{
